src/connectionbar/ConnectionBar.css
.the-bar{
    width : 100%;
    height: 5vmin;
    background-color: rgb(209, 206, 206);
    margin: auto;
    display: flex;
    flex-direction: row;
    /* position: fixed;
    bottom: 0; */
}

.sticky {
    position: fixed;
    top: 0;
  }

  .sticky + *{
    padding-top: 5vmin;
  }

.icons{
    height: 100%;
    cursor:pointer;
}
.icons:hover{
    opacity: 0.5;
}

.linkedin {
    background: url(LI-In-Bug.png);
    background-size: 100% 100%;
    width: 6vmin;
}

.github {
    background: url(GitHub-Mark-120px-plus.png);
    background-size: 100% 100%;
    width: 5vmin;
}

.sayhi{
    align-self: center;
    margin-left: 25vw;
    width: 25vw;
    text-align: center;
    font-size: 2vw;
}

